--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ bio:                'Minimal, one column jekyll theme.'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
-background:         'assets/img/bg_resized.jpg'
-tiled_bg:           true   # Set this true if you want to tile your background image, otherwise it will be covered
+logo:               'assets/img/logo.png' 
+background:         'assets/img/placeholder_big.jpg'
+tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://gnaprs.github.io/
 
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   gnaprs
 
 # Social
 # if you don't have any of social below, comment the line.
@@ -37,7 +37,7 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              sr_pang@hotmail.com
 twitter:            srpang
 facebook:           mpangwr
 github-url:         gnaprs
