--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ twitter:            srpang
 facebook:           mpangwr
 github-url:         gnaprs
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           marionpang
 #xing:              username
 #instagram:          gnaprs
 #lastfm:            username
