quick test for deployment workflow

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   gnaprs
 #bing-verify:
 email:              sr_pang@hotmail.com
 twitter:            srpang
-facebook:           mpangwr
+#facebook:           mpangwr
 github-url:         gnaprs
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           marionpang
