update bio and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Marion Pang
-bio:                'Aspiring Biomedical Engineer, wanting to make some real cool stuff.'
-description:        "Marion's personal website in the making."
+bio:                'Budding Biomedical Engineer, aspiring to make some cool stuff.'
+description:        "Marion's personal website."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/marion_circle.png' 
