fix background transparency

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Marion Pang
-bio:                'Budding Biomedical Engineer, aspiring to make some cool stuff.'
+bio:                'A biomedical engineer aspiring to make some cool stuff :)'
 description:        "Marion's personal website."
 reading_time:       true
 words_per_minute:   200
